* Fixed issue 1786751 - validateUrl in HyperLink does not support https
* Fixed an issue that causes weird client behavior when removing a menu from the
  frame